// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsRow render should render in amp 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-TabsRow-with-app) items={{...}}>
      <inject-TabsRow-with-app items={{...}} classes={{...}}>
        <TabsRow items={{...}} classes={{...}} app={{...}} scrollable={true} centered={false}>
          <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" classes={{...}}>
            <Tabs value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
              <div className="MuiTabs-root-9 RSFTabsRow-root-3 RSFTabsRow-root-3">
                <EventListener target="window" onResize={[Function: debounced]} />
                <ScrollbarSize onLoad={[Function]} onChange={[Function]}>
                  <div>
                    <EventListener target="window" onResize={[Function: debounced]} />
                    <div style={{...}} />
                  </div>
                </ScrollbarSize>
                <div className="MuiTabs-flexContainer-10">
                  <WithStyles(TabScrollButton) direction="left" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton direction="left" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" classes={{...}}>
                      <div className="MuiPrivateTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                  <div className="MuiTabs-scroller-12 RSFTabsRow-scroller-6 MuiTabs-scrollable-14" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                    <div className="MuiTabs-flexContainer-10">
                      <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                        <Tab label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                            <ButtonBase focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                              <button className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                <span className="MuiTab-wrapper-27">
                                  <span className="MuiTab-labelContainer-28">
                                    <span className="MuiTab-label-29">
                                      <WithStyles(inject-Link) className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                        <inject-Link className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}}>
                                          <Link className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}} history={{...}} router={{...}} location={{...}} anchorProps={{...}}>
                                            <a data-moov-link="on" className="RSFLink-root-48 RSFTabsRow-link-7" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                              Tab 1
                                            </a>
                                          </Link>
                                        </inject-Link>
                                      </WithStyles(inject-Link)>
                                    </span>
                                  </span>
                                </span>
                                <NoSsr defer={false} fallback={{...}}>
                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                    <TouchRipple center={false} classes={{...}}>
                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                        <span className="MuiTouchRipple-root-38" />
                                      </TransitionGroup>
                                    </TouchRipple>
                                  </WithStyles(TouchRipple)>
                                </NoSsr>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                      <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                        <Tab label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                            <ButtonBase focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                              <button className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                <span className="MuiTab-wrapper-27">
                                  <span className="MuiTab-labelContainer-28">
                                    <span className="MuiTab-label-29">
                                      <WithStyles(inject-Link) className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                        <inject-Link className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}}>
                                          <Link className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}} history={{...}} router={{...}} location={{...}} anchorProps={{...}}>
                                            <a data-moov-link="on" className="RSFLink-root-48 RSFTabsRow-link-7" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                              Tab 2
                                            </a>
                                          </Link>
                                        </inject-Link>
                                      </WithStyles(inject-Link)>
                                    </span>
                                  </span>
                                </span>
                                <NoSsr defer={false} fallback={{...}}>
                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                    <TouchRipple center={false} classes={{...}}>
                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                        <span className="MuiTouchRipple-root-38" />
                                      </TransitionGroup>
                                    </TouchRipple>
                                  </WithStyles(TouchRipple)>
                                </NoSsr>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                    </div>
                    <WithStyles(TabIndicator) className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary" style={{...}}>
                      <TabIndicator className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary" style={{...}} classes={{...}}>
                        <span className="MuiPrivateTabIndicator-root-45 MuiPrivateTabIndicator-colorSecondary-47 MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" style={{...}} />
                      </TabIndicator>
                    </WithStyles(TabIndicator)>
                  </div>
                  <WithStyles(TabScrollButton) direction="right" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton direction="right" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" classes={{...}}>
                      <div className="MuiPrivateTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                </div>
              </div>
            </Tabs>
          </WithStyles(Tabs)>
        </TabsRow>
      </inject-TabsRow-with-app>
    </WithStyles(inject-TabsRow-with-app)>
  </Provider>
</TestProvider>
`;

exports[`TabsRow render should render tabs with images 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-TabsRow-with-app) items={{...}}>
      <inject-TabsRow-with-app items={{...}} classes={{...}}>
        <TabsRow items={{...}} classes={{...}} app={{...}} scrollable={true} centered={false}>
          <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" classes={{...}}>
            <Tabs value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
              <div className="MuiTabs-root-9 RSFTabsRow-root-3 RSFTabsRow-root-3">
                <EventListener target="window" onResize={[Function: debounced]} />
                <ScrollbarSize onLoad={[Function]} onChange={[Function]}>
                  <div>
                    <EventListener target="window" onResize={[Function: debounced]} />
                    <div style={{...}} />
                  </div>
                </ScrollbarSize>
                <div className="MuiTabs-flexContainer-10">
                  <WithStyles(TabScrollButton) direction="left" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton direction="left" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" classes={{...}}>
                      <div className="MuiPrivateTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                  <div className="MuiTabs-scroller-12 RSFTabsRow-scroller-6 MuiTabs-scrollable-14" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                    <div className="MuiTabs-flexContainer-10">
                      <WithStyles(Tab) label={[undefined]} icon={{...}} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                        <Tab label={[undefined]} icon={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                            <ButtonBase focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                              <button className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                <span className="MuiTab-wrapper-27">
                                  <WithStyles(inject-Image) src="https://example.com" alt={[undefined]}>
                                    <inject-Image src="https://example.com" alt={[undefined]} classes={{...}}>
                                      <Image src="https://example.com" alt={[undefined]} classes={{...}} amp={false} quality={{...}} contain={false} fill={false} lazy={false} lazyOffset={100}>
                                        <div className="RSFImage-root-34">
                                          <img src="https://example.com" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} />
                                        </div>
                                      </Image>
                                    </inject-Image>
                                  </WithStyles(inject-Image)>
                                </span>
                                <NoSsr defer={false} fallback={{...}}>
                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                    <TouchRipple center={false} classes={{...}}>
                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                        <span className="MuiTouchRipple-root-38" />
                                      </TransitionGroup>
                                    </TouchRipple>
                                  </WithStyles(TouchRipple)>
                                </NoSsr>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                      <WithStyles(Tab) label={[undefined]} icon={{...}} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                        <Tab label={[undefined]} icon={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                            <ButtonBase focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                              <button className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                <span className="MuiTab-wrapper-27">
                                  <WithStyles(inject-Image) src="https://example.com" alt={[undefined]}>
                                    <inject-Image src="https://example.com" alt={[undefined]} classes={{...}}>
                                      <Image src="https://example.com" alt={[undefined]} classes={{...}} amp={false} quality={{...}} contain={false} fill={false} lazy={false} lazyOffset={100}>
                                        <div className="RSFImage-root-34">
                                          <img src="https://example.com" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} />
                                        </div>
                                      </Image>
                                    </inject-Image>
                                  </WithStyles(inject-Image)>
                                </span>
                                <NoSsr defer={false} fallback={{...}}>
                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                    <TouchRipple center={false} classes={{...}}>
                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                        <span className="MuiTouchRipple-root-38" />
                                      </TransitionGroup>
                                    </TouchRipple>
                                  </WithStyles(TouchRipple)>
                                </NoSsr>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                    </div>
                    <WithStyles(TabIndicator) className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary" style={{...}}>
                      <TabIndicator className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary" style={{...}} classes={{...}}>
                        <span className="MuiPrivateTabIndicator-root-45 MuiPrivateTabIndicator-colorSecondary-47 MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" style={{...}} />
                      </TabIndicator>
                    </WithStyles(TabIndicator)>
                  </div>
                  <WithStyles(TabScrollButton) direction="right" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton direction="right" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" classes={{...}}>
                      <div className="MuiPrivateTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                </div>
              </div>
            </Tabs>
          </WithStyles(Tabs)>
        </TabsRow>
      </inject-TabsRow-with-app>
    </WithStyles(inject-TabsRow-with-app)>
  </Provider>
</TestProvider>
`;

exports[`TabsRow render should render tabs with text 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-TabsRow-with-app) items={{...}}>
      <inject-TabsRow-with-app items={{...}} classes={{...}}>
        <TabsRow items={{...}} classes={{...}} app={{...}} scrollable={true} centered={false}>
          <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" classes={{...}}>
            <Tabs value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
              <div className="MuiTabs-root-9 RSFTabsRow-root-3 RSFTabsRow-root-3">
                <EventListener target="window" onResize={[Function: debounced]} />
                <ScrollbarSize onLoad={[Function]} onChange={[Function]}>
                  <div>
                    <EventListener target="window" onResize={[Function: debounced]} />
                    <div style={{...}} />
                  </div>
                </ScrollbarSize>
                <div className="MuiTabs-flexContainer-10">
                  <WithStyles(TabScrollButton) direction="left" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton direction="left" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" classes={{...}}>
                      <div className="MuiPrivateTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                  <div className="MuiTabs-scroller-12 RSFTabsRow-scroller-6 MuiTabs-scrollable-14" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                    <div className="MuiTabs-flexContainer-10">
                      <WithStyles(Tab) label="Tab 1" icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                        <Tab label="Tab 1" icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                            <ButtonBase focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                              <button className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                <span className="MuiTab-wrapper-27">
                                  <span className="MuiTab-labelContainer-28">
                                    <span className="MuiTab-label-29">
                                      Tab 1
                                    </span>
                                  </span>
                                </span>
                                <NoSsr defer={false} fallback={{...}}>
                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                    <TouchRipple center={false} classes={{...}}>
                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                        <span className="MuiTouchRipple-root-38" />
                                      </TransitionGroup>
                                    </TouchRipple>
                                  </WithStyles(TouchRipple)>
                                </NoSsr>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                      <WithStyles(Tab) label="Tab 2" icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                        <Tab label="Tab 2" icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                            <ButtonBase focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                              <button className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                <span className="MuiTab-wrapper-27">
                                  <span className="MuiTab-labelContainer-28">
                                    <span className="MuiTab-label-29">
                                      Tab 2
                                    </span>
                                  </span>
                                </span>
                                <NoSsr defer={false} fallback={{...}}>
                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                    <TouchRipple center={false} classes={{...}}>
                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                        <span className="MuiTouchRipple-root-38" />
                                      </TransitionGroup>
                                    </TouchRipple>
                                  </WithStyles(TouchRipple)>
                                </NoSsr>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                    </div>
                    <WithStyles(TabIndicator) className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary" style={{...}}>
                      <TabIndicator className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary" style={{...}} classes={{...}}>
                        <span className="MuiPrivateTabIndicator-root-45 MuiPrivateTabIndicator-colorSecondary-47 MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" style={{...}} />
                      </TabIndicator>
                    </WithStyles(TabIndicator)>
                  </div>
                  <WithStyles(TabScrollButton) direction="right" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton direction="right" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" classes={{...}}>
                      <div className="MuiPrivateTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                </div>
              </div>
            </Tabs>
          </WithStyles(Tabs)>
        </TabsRow>
      </inject-TabsRow-with-app>
    </WithStyles(inject-TabsRow-with-app)>
  </Provider>
</TestProvider>
`;

exports[`TabsRow render should render tabs with urls 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-TabsRow-with-app) items={{...}}>
      <inject-TabsRow-with-app items={{...}} classes={{...}}>
        <TabsRow items={{...}} classes={{...}} app={{...}} scrollable={true} centered={false}>
          <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" classes={{...}}>
            <Tabs value={false} onChange={[Function]} indicatorColor="secondary" scrollable={true} className="RSFTabsRow-root-3" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
              <div className="MuiTabs-root-9 RSFTabsRow-root-3 RSFTabsRow-root-3">
                <EventListener target="window" onResize={[Function: debounced]} />
                <ScrollbarSize onLoad={[Function]} onChange={[Function]}>
                  <div>
                    <EventListener target="window" onResize={[Function: debounced]} />
                    <div style={{...}} />
                  </div>
                </ScrollbarSize>
                <div className="MuiTabs-flexContainer-10">
                  <WithStyles(TabScrollButton) direction="left" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton direction="left" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" classes={{...}}>
                      <div className="MuiPrivateTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                  <div className="MuiTabs-scroller-12 RSFTabsRow-scroller-6 MuiTabs-scrollable-14" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                    <div className="MuiTabs-flexContainer-10">
                      <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                        <Tab label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                            <ButtonBase focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                              <button className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                <span className="MuiTab-wrapper-27">
                                  <span className="MuiTab-labelContainer-28">
                                    <span className="MuiTab-label-29">
                                      <WithStyles(inject-Link) className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                        <inject-Link className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}}>
                                          <Link className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}} history={{...}} router={{...}} location={{...}} anchorProps={{...}}>
                                            <a data-moov-link="on" className="RSFLink-root-48 RSFTabsRow-link-7" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                              Tab 1
                                            </a>
                                          </Link>
                                        </inject-Link>
                                      </WithStyles(inject-Link)>
                                    </span>
                                  </span>
                                </span>
                                <NoSsr defer={false} fallback={{...}}>
                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                    <TouchRipple center={false} classes={{...}}>
                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                        <span className="MuiTouchRipple-root-38" />
                                      </TransitionGroup>
                                    </TouchRipple>
                                  </WithStyles(TouchRipple)>
                                </NoSsr>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                      <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                        <Tab label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}} disabled={false}>
                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                            <ButtonBase focusRipple={true} className="MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                              <button className="MuiButtonBase-root-31 MuiTab-root-19 RSFTabsRow-tab-4 MuiTab-textColorInherit-21" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                <span className="MuiTab-wrapper-27">
                                  <span className="MuiTab-labelContainer-28">
                                    <span className="MuiTab-label-29">
                                      <WithStyles(inject-Link) className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                        <inject-Link className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}}>
                                          <Link className="RSFTabsRow-link-7" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}} history={{...}} router={{...}} location={{...}} anchorProps={{...}}>
                                            <a data-moov-link="on" className="RSFLink-root-48 RSFTabsRow-link-7" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                              Tab 2
                                            </a>
                                          </Link>
                                        </inject-Link>
                                      </WithStyles(inject-Link)>
                                    </span>
                                  </span>
                                </span>
                                <NoSsr defer={false} fallback={{...}}>
                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                    <TouchRipple center={false} classes={{...}}>
                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-38" childFactory={[Function: childFactory]}>
                                        <span className="MuiTouchRipple-root-38" />
                                      </TransitionGroup>
                                    </TouchRipple>
                                  </WithStyles(TouchRipple)>
                                </NoSsr>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Tab>
                      </WithStyles(Tab)>
                    </div>
                    <WithStyles(TabIndicator) className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary" style={{...}}>
                      <TabIndicator className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary" style={{...}} classes={{...}}>
                        <span className="MuiPrivateTabIndicator-root-45 MuiPrivateTabIndicator-colorSecondary-47 MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" style={{...}} />
                      </TabIndicator>
                    </WithStyles(TabIndicator)>
                  </div>
                  <WithStyles(TabScrollButton) direction="right" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16">
                    <TabScrollButton direction="right" onClick={[Function]} visible={false} className="MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" classes={{...}}>
                      <div className="MuiPrivateTabScrollButton-root-18 MuiTabs-scrollButtons-15 MuiTabs-scrollButtonsAuto-16" />
                    </TabScrollButton>
                  </WithStyles(TabScrollButton)>
                </div>
              </div>
            </Tabs>
          </WithStyles(Tabs)>
        </TabsRow>
      </inject-TabsRow-with-app>
    </WithStyles(inject-TabsRow-with-app)>
  </Provider>
</TestProvider>
`;
